# dnd-cli

./: Cargo.toml
.github/workflows/: release.yml
src/: auth.rs  client.rs  lib.rs  main.rs  ui.rs
